--- a/How JavaScript works/index.html
+++ b/How JavaScript works/index.html
@@ -4,12 +4,10 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>JavaScript Tutorial</title>
-  
+    <title>Behind the scenes</title>
 </head>
 <body>
-    <h1>JavaScript for Begineers</h1>
-
+    <h1>How JavaScript works</h1>
     <script src="main.js"></script>
 </body>
 </html>
