--- a/Pig Game/index.html
+++ b/Pig Game/index.html
@@ -34,7 +34,7 @@
         <button class="btn-roll"><i class="ion-ios-loop"></i>Roll dice</button>
         <button class="btn-hold"><i class="ion-ios-download-outline"></i>Hold</button>
 
-        <img src="" alt="Dice" class="dice">
+        <img src="dice-five.png" alt="Dice" class="dice">
     </div>
 
 
