--- a/Pig Game/index.html
+++ b/Pig Game/index.html
@@ -21,7 +21,7 @@
             </div>
         </div>
 
-        <div class="player-1-panel active">
+        <div class="player-1-panel">
             <div class="player-name" id="name-1">Player 2</div>
             <div class="player-score" id="score-1">72</div>
             <div class="player-current-box">
