--- a/Pig Game/index.html
+++ b/Pig Game/index.html
@@ -37,10 +37,7 @@
         <img src="dice-5.png" alt="Dice" class="dice">
     </div>
 
-
-
-
-
-    <Script src="main.js"></Script>
+    <!--<Script src="main.js"></Script>-->
+    <script src="challenge.js"></script>
 </body>
 </html>
