--- a/Pig Game/index.html
+++ b/Pig Game/index.html
@@ -33,6 +33,8 @@
         <button class="btn-new"><i class="ion-ios-plus-outline"></i>New</button>
         <button class="btn-roll"><i class="ion-ios-loop"></i>Roll dice</button>
         <button class="btn-hold"><i class="ion-ios-download-outline"></i>Hold</button>
+        
+        <input type="text" class="form-control" id="global" placeholder="Final score">
 
         <img src="dice-5.png" alt="Dice" class="dice">
     </div>
