--- a/Pig Game/index.html
+++ b/Pig Game/index.html
@@ -36,7 +36,9 @@
         
         <input type="text" class="form-control" id="global" placeholder="Final score">
 
-        <img src="dice-5.png" alt="Dice" class="dice">
+        <img src="dice-5.png" alt="Dice" class="dice" id="dice-0">
+        <img src="dice-5.png" alt="Dice" class="dice" id="dice-1">
+
     </div>
 
     <!--<Script src="main.js"></Script>-->
